--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "main": "dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc"
+    "build": "tsc",
+    "publish": "tsc && npm publish --access public"
   },
   "author": "https://github.com/thenku",
   "license": "MIT"
